# geonadir-upload-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  runner.py  sample_metadata.json  setup.py
.github/workflows/: python-publish-test.yml  python-publish.yaml  python-publish.yml
app/: cli.py  dataset.py  parallel.py
geonadir_upload_cli/: parallel.py
src/geonadir_upload_cli/: cli.py  dataset.py  parallel.py  stac.py  upload.py  util.py
tests/: tests.py
